2017-11-30  Ryan Haddad  <ryanhaddad@apple.com>

        Unreviewed build fix, remove executable property from a header file.

        * include/KHR/khrplatform.h: Removed property svn:executable.

2017-11-30  Dean Jackson  <dino@apple.com>

        Update ANGLE
        https://bugs.webkit.org/show_bug.cgi?id=180177
        <rdar://problem/35774734>

        Reviewed by Alex Christensen.

        Huge list of changed files omitted.

2017-07-18  Andy Estes  <aestes@apple.com>

        [Xcode] Enable CLANG_WARN_RANGE_LOOP_ANALYSIS
        https://bugs.webkit.org/show_bug.cgi?id=174631

        Reviewed by Tim Horton.

        * Configurations/Base.xcconfig:

2017-07-18  Andy Estes  <aestes@apple.com>

        [Xcode] Enable CLANG_WARN_OBJC_LITERAL_CONVERSION
        https://bugs.webkit.org/show_bug.cgi?id=174631

        Reviewed by Sam Weinig.

        * Configurations/Base.xcconfig:

2017-07-18  Andy Estes  <aestes@apple.com>

        [Xcode] Enable CLANG_WARN_NON_LITERAL_NULL_CONVERSION
        https://bugs.webkit.org/show_bug.cgi?id=174631

        Reviewed by Dan Bernstein.

        * Configurations/Base.xcconfig:

2017-07-18  Andy Estes  <aestes@apple.com>

        [Xcode] Enable CLANG_WARN_BLOCK_CAPTURE_AUTORELEASING
        https://bugs.webkit.org/show_bug.cgi?id=174631

        Reviewed by Darin Adler.

        * Configurations/Base.xcconfig:

2017-07-13  Adrian Perez de Castro  <aperez@igalia.com>

        eglplatform.h does not support Wayland
        https://bugs.webkit.org/show_bug.cgi?id=163482

        This makes it possible to build WebKitGTK+ when the target system has only Wayland support,
        but no X11 (and therefore the X11 headers are not present).

        Reviewed by Alex Christensen.

        * include/EGL/eglplatform.h: Add Wayland typedefs when WL_EGL_PLATFORM is defined (for example
        by including wayland-egl.h before including EGL/egl.h). Also, include the X11 headers only