@@ -1,3 +1,11 @@
+2017-11-30  Alex Christensen  <achristensen@webkit.org>
+
+        Speculative WinCairo fix.
+        https://bugs.webkit.org/show_bug.cgi?id=180177
+
+        * CMakeLists.txt:
+        * PlatformWin.cmake:
+
 2017-11-30  Ryan Haddad  <ryanhaddad@apple.com>
 
         Unreviewed build fix, remove executable property from a header file.
